tooling/nargo_cli/tests/snapshots/execute__tests__fmtstr_with_global_force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "6987257810602188531",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/9VZ247aMBA1kADhshf6EZX65EAg9I2Hvd/7CQEaaV+2VdUPyKe3rjzkMNhSpXhWy0iRk8zJOePJZGxES9XWsmPERpet7KibWWo0h6Iai4UQb3lcvFMtwzvbHle8+VqGNxOqs6w8Lt78oB7Ccev0vbm9Rs3yhx0TO7bB3wkYXMJ0Q/Iv9XyaOOYXMP5ZYjljGf7vxN+V4dc9y3NR1fw4F9LtMBx/BjGXgLkETAswV4C58mCuAXPtwdwA5saDuQXMrQdzB5g7D+YeMPcezANgHjyYR8A8ejBPgHnyYJ4B8+zBvADmBTDGPwY82YXFUN1JfPdLnc2F63pNc4thbjRP0u7JaG9aTE+p+n2gj/QHSrSHpC2mR/Hw/NC7HhOmquPhvqg6nAf5YvDR++3/PT4DjtdWzHyUL2NUt+TDDfy3quafgtbMntO7llxfpL4TY58c8aOWsV5V54Py1oF7MeTvX34Qz3wJ+KJqX2dgryPQQS6KI2Z42oGc2rELz9DzZw79LtPfi9txj+clceATB97U6Bd7PrSHqaFXekYdfp/mWNlr3cjytasXhuOfTl39Lhz/Yhd/X4b/K/EnMvy7PdZAhj8j/qEI/6wg/pFM/AviH8vw7/YCJzL8G+I/FeHPt7QuUQ8jDaXq3nEO98OtD2n6v3sN0h+wWKX2GucsHp4f3E8Y38QR65nDx3vwxKEzcei4uLoBuXoBufoBuZKAXIOAXCFzP/ygcY0CcoWsiXFArpOAXB+1vmjdcO0Dja3sqJvZrnd2HbG2HbES3vW7ztVrRxD7z1+vb78VMxQmcjwn/5DhOuw68gTIF8jYo8v18dr3r4oP71qUDQc1xqhSe/NY2fu6geVLrUmLfmDFaj9PiunHDP9mr/GjoDFqEGeZF2k5K8piXmy32aaYMH5jbcjTH0hbGnFKGwAA",
  "debug_symbols": "ldbLasMwEIXhd9HaC8kXzYxfpZTiJE4wGDs4TqEYv3vlkBBo0sW/PJaOR/BtZnGHdnc9fXXDcby4+mNx/bhv5m4cUlqcv326nJthS5e5mWZXlz5z7XBwdSzWzB27vnV15dfs5aJauN+0/Hk1z9fPFHZT1/fd6evvvMVV+bup//8sc1WBGyVuVLgRcUNwQ3HDaCN63Ai4gc0jNo/YPGLziM0jNo/YPGJzweaCzQWbCzYXbC7YXLC5YHPB5oLNFZsrNldsrthcsblic8Xmis0Vmys2N2xu2NywuWFzw+aGzQ2bGzY3bG7YPPi36FLKvSLqXyqBV3JeKVhlTem7mbpm17fb/rgdXof9Y51Mcf45P04eC+d5Gvft4Tq12+r53Dq30YVlpd0ekkLwVRaCT0PSoF8=",
  "file_map": {
    "22": {
      "source": "pub mod hash;\npub mod aes128;\npub mod array;\npub mod slice;\npub mod ecdsa_secp256k1;\npub mod ecdsa_secp256r1;\npub mod embedded_curve_ops;\npub mod field;\npub mod collections;\npub mod compat;\npub mod convert;\npub mod option;\npub mod string;\npub mod test;\npub mod cmp;\npub mod ops;\npub mod default;\npub mod prelude;\npub mod runtime;\npub mod meta;\npub mod append;\npub mod mem;\npub mod panic;\npub mod hint;\n\nuse convert::AsPrimitive;\n\n// Oracle calls are required to be wrapped in an unconstrained function\n// Thus, the only argument to the `println` oracle is expected to always be an ident\n#[oracle(print)]\nunconstrained fn print_oracle<T>(with_newline: bool, input: T) {}\n\nunconstrained fn print_unconstrained<T>(with_newline: bool, input: T) {\n    print_oracle(with_newline, input);\n}\n\npub fn println<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(true, input);\n    }\n}\n\npub fn print<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(false, input);\n    }\n}\n\npub fn verify_proof<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n) {\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, 0);\n}\n\npub fn verify_proof_with_type<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {\n    if !crate::runtime::is_unconstrained() {\n        crate::assert_constant(proof_type);\n    }\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, proof_type);\n}\n\n#[foreign(recursive_aggregation)]\nfn verify_proof_internal<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {}\n\n// Asserts that the given value is known at compile-time.\n// Useful for debugging for-loop bounds.\n#[builtin(assert_constant)]\npub fn assert_constant<T>(x: T) {}\n\n// Asserts that the given value is both true and known at compile-time\n#[builtin(static_assert)]\npub fn static_assert<let N: u32>(predicate: bool, message: str<N>) {}\n\npub fn wrapping_add<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() + y.as_())\n}\n\npub fn wrapping_sub<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    //340282366920938463463374607431768211456 is 2^128, it is used to avoid underflow\n    AsPrimitive::as_(x.as_() + 340282366920938463463374607431768211456 - y.as_())\n}\n\npub fn wrapping_mul<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() * y.as_())\n}\n\n#[builtin(as_witness)]\npub fn as_witness(x: Field) {}\n\nmod tests {\n    use super::wrapping_mul;\n\n    #[test(should_fail_with = \"custom message\")]\n    fn test_static_assert_custom_message() {\n        super::static_assert(1 == 2, \"custom message\");\n    }\n\n    #[test(should_fail)]\n    fn test_wrapping_mul() {\n        // This currently fails.\n        // See: https://github.com/noir-lang/noir/issues/7528\n        let zero: u128 = 0;\n        let one: u128 = 1;\n        let two_pow_64: u128 = 0x10000000000000000;\n        let u128_max: u128 = 0xffffffffffffffffffffffffffffffff;\n\n        // 1*0==0\n        assert_eq(zero, wrapping_mul(zero, one));\n\n        // 0*1==0\n        assert_eq(zero, wrapping_mul(one, zero));\n\n        // 1*1==1\n        assert_eq(one, wrapping_mul(one, one));\n\n        // 0 * ( 1 << 64 ) ==  0\n        assert_eq(zero, wrapping_mul(zero, two_pow_64));\n\n        // ( 1 << 64 ) * 0 == 0\n        assert_eq(zero, wrapping_mul(two_pow_64, zero));\n\n        // 1 * ( 1 << 64 ) == 1 << 64\n        assert_eq(two_pow_64, wrapping_mul(two_pow_64, one));\n\n        // ( 1 << 64 ) * 1 == 1 << 64\n        assert_eq(two_pow_64, wrapping_mul(one, two_pow_64));\n\n        // ( 1 << 64 ) * ( 1 << 64 ) == 1 << 64\n        assert_eq(zero, wrapping_mul(two_pow_64, two_pow_64));\n        // -1 * -1 == 1\n        assert_eq(one, wrapping_mul(u128_max, u128_max));\n    }\n}\n",
      "path": "std/lib.nr"
    },
    "50": {
      "source": "global FOO: Field = 1;\n\nfn main() {\n    println(f\"foo = {FOO}\");\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "print_unconstrained"
  ]
}
