tooling/nargo_cli/tests/snapshots/execute__tests__fmtstr_with_global_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "10959638679082647575",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/82Y3W7bMAyFpdhx/JM23vYidpIm2cWAYW23vYabzMBuhqFo7/3orQAzZk7Z3pgETCBwFCnfoSiaJuzdYL6/xm6EEeS5v2b9dcbmo9fP935cjbM6A11N/qHaHjJhf4r+b7Ke6W34FfGN4l8tes7vbuDzvZBu+vop2PdPbsgPq/3T+Vnu/8sHe6bcue3c2ZR0z3l/1w26Fvz77vJcdfi7HfF/mvD3D8T/ZcM/hVwOefyNnTXmgWK8WimP9fjrc52ITPibE/FjE/52R/y5Db+96nmJG8zD2S/Y74o15uhBz8E5OdDPwVftZ64HPfIH40O5SrFLBV9LmAuGNScVdFJBpxR08H6cCmumyIom6FcwrO1j/IqV/JJqxBRYwehZZdwT1sY90Z7ud14fyK6Efd91l3O8p0/gfzmb8zBXMCb1XN69tQjG2KfeMi6uIyuYn3E3zGvFcX+oKtKLev7cvfWd689h/Y9+zGNG13iEn+2+qdtN0zY3zem0PTafgR9sxuIk9Uk2z+n1mviJCX/3ID3rFflfiZ/a8P8QP7Phb4mfm/A3DfELG/9viL+04R+pVvHagn3kNftdry7XtQc95+Q+kvRz8NWqj7wGfzA+2EeuBF9LmAuG/cdK0FkJOqWgg/VqDCtRZC0UWakiK1NkacY+n6Bfwe47Pb80c6JQZC0VWVPMr2D4vmkusGYCi9YnwnqpFi4Z+//j339PDgxfVHgnO1bAugjG8TsOlpdy5yZeekHC9fm4cLK9t74U2IHxAvju5sXGGAAA",
  "debug_symbols": "tZfLioNAEEX/pdcuutt+VPkrwxCMtqFBVHwMDOK/jwYhYRICd9EboaTOQTyrWkUdrsvtErumn0TxtYq2r8o59t0+rVsmrmNs23i7PL8W8nhYed+fhrI7xmkux1kURmYidLUoXL7TTWyDKKzcspdFYnVusn6sar19Z8KqdGqdTp2nU5t0aptO7dKpfTo1pVNzMrV7+9UfCUYJL2FCwYSGiRwmDExYmHAw4WECbu7h5gQ3J7g5wc0Jbk5wc4KbE9yc4OYENye4OcPNGW7OcHOGmzPcnOHmDDdnuDnDzRlurqTEEYUjGkdyHDE4YnHE4YjHEcIRvL7C6yu8vsLrq7f1vfEn4km+IAZHLIZs+/RTjrG8tuE8lJqlq57upvl3CP9OqGHsq1AvYziOqccddf/1TmXO7dpd/Qc=",
  "file_map": {
    "22": {
      "source": "pub mod hash;\npub mod aes128;\npub mod array;\npub mod slice;\npub mod ecdsa_secp256k1;\npub mod ecdsa_secp256r1;\npub mod embedded_curve_ops;\npub mod field;\npub mod collections;\npub mod compat;\npub mod convert;\npub mod option;\npub mod string;\npub mod test;\npub mod cmp;\npub mod ops;\npub mod default;\npub mod prelude;\npub mod runtime;\npub mod meta;\npub mod append;\npub mod mem;\npub mod panic;\npub mod hint;\n\nuse convert::AsPrimitive;\n\n// Oracle calls are required to be wrapped in an unconstrained function\n// Thus, the only argument to the `println` oracle is expected to always be an ident\n#[oracle(print)]\nunconstrained fn print_oracle<T>(with_newline: bool, input: T) {}\n\nunconstrained fn print_unconstrained<T>(with_newline: bool, input: T) {\n    print_oracle(with_newline, input);\n}\n\npub fn println<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(true, input);\n    }\n}\n\npub fn print<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(false, input);\n    }\n}\n\npub fn verify_proof<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n) {\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, 0);\n}\n\npub fn verify_proof_with_type<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {\n    if !crate::runtime::is_unconstrained() {\n        crate::assert_constant(proof_type);\n    }\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, proof_type);\n}\n\n#[foreign(recursive_aggregation)]\nfn verify_proof_internal<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {}\n\n// Asserts that the given value is known at compile-time.\n// Useful for debugging for-loop bounds.\n#[builtin(assert_constant)]\npub fn assert_constant<T>(x: T) {}\n\n// Asserts that the given value is both true and known at compile-time\n#[builtin(static_assert)]\npub fn static_assert<let N: u32>(predicate: bool, message: str<N>) {}\n\npub fn wrapping_add<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() + y.as_())\n}\n\npub fn wrapping_sub<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    //340282366920938463463374607431768211456 is 2^128, it is used to avoid underflow\n    AsPrimitive::as_(x.as_() + 340282366920938463463374607431768211456 - y.as_())\n}\n\npub fn wrapping_mul<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() * y.as_())\n}\n\n#[builtin(as_witness)]\npub fn as_witness(x: Field) {}\n\nmod tests {\n    use super::wrapping_mul;\n\n    #[test(should_fail_with = \"custom message\")]\n    fn test_static_assert_custom_message() {\n        super::static_assert(1 == 2, \"custom message\");\n    }\n\n    #[test(should_fail)]\n    fn test_wrapping_mul() {\n        // This currently fails.\n        // See: https://github.com/noir-lang/noir/issues/7528\n        let zero: u128 = 0;\n        let one: u128 = 1;\n        let two_pow_64: u128 = 0x10000000000000000;\n        let u128_max: u128 = 0xffffffffffffffffffffffffffffffff;\n\n        // 1*0==0\n        assert_eq(zero, wrapping_mul(zero, one));\n\n        // 0*1==0\n        assert_eq(zero, wrapping_mul(one, zero));\n\n        // 1*1==1\n        assert_eq(one, wrapping_mul(one, one));\n\n        // 0 * ( 1 << 64 ) ==  0\n        assert_eq(zero, wrapping_mul(zero, two_pow_64));\n\n        // ( 1 << 64 ) * 0 == 0\n        assert_eq(zero, wrapping_mul(two_pow_64, zero));\n\n        // 1 * ( 1 << 64 ) == 1 << 64\n        assert_eq(two_pow_64, wrapping_mul(two_pow_64, one));\n\n        // ( 1 << 64 ) * 1 == 1 << 64\n        assert_eq(two_pow_64, wrapping_mul(one, two_pow_64));\n\n        // ( 1 << 64 ) * ( 1 << 64 ) == 1 << 64\n        assert_eq(zero, wrapping_mul(two_pow_64, two_pow_64));\n        // -1 * -1 == 1\n        assert_eq(one, wrapping_mul(u128_max, u128_max));\n    }\n}\n",
      "path": "std/lib.nr"
    },
    "50": {
      "source": "global FOO: Field = 1;\n\nfn main() {\n    println(f\"foo = {FOO}\");\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/fmtstr_with_global/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
