tooling/nargo_cli/tests/snapshots/execute__tests__fmtstr_with_global_force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "10959638679082647575",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/82Y/2qDMBDHo0adpj9ke5HYWtv9V9hexNYJ3R9jjD1AH30VcjY9rmXgHXhQoiZ8vpdLcmcN1NUC12o1wgDy6drMtaHXH11+e3dvx1mZIV1O/s5WVUbMj9H/deaYgQzfAl8o/jZ1nPfzle/PBXSfLj/jXc/VdX9IzR/WT3L+Lw/mDHvn7awGY9ItjYtj+yCOAZteXVNxZOR3mbc2/PzVcA60CH/dAj8W4W8PwE9E+NWwvqkMf1jfJ5n4tHPH8/M1nAXQzr3njDngGCA9pW73sUL6OfKVuyYGSA/8wfGBswyxM4SvBdGHc4whdAyhQ7HCibIiRpaeqF8xIythZKUTZUHukq2Fq5VsLawPsrWwfpWtVfWHbK2qK6peML4rNJmicyqT/xvgz2T4R6gX8A4PGr2B9sJ7zlfbyvK/tRb0c+SrVK1dIH9wfHCtXRK+FkQfztFLQmdJ6FCskJEVMbI0IythZKWMLM7Y5xP1K2Bkce4Jw8iaMbKmur/we46/rr3tXWvHWSn8bWbIzRERC+p/EIzXxHgql/d7AfLz98/p61chS7xr6oCAYwaNCxEHPiBhB4s7fKyL+/17rB3dYfr3BcHvORBUfb7l7d1zO8K2O2tBK3L8GPmrkH6Mxp/cvZ9AodUj/Oy2Tdmtm67ZNG1bHZtnxO8t9OL0B1lfrdh2FwAA",
  "debug_symbols": "zdnPaoNAEIDxd9mzh9XozKyvUkowySYIosE/hSK+e7UICempl/a7CCuzy3f6XWZ2l3iabse6vXaDK99m13Tnaqy7dj3NS+JOfd009e34/Nv57ZOH7/nhXrXbcRirfnRl7hMX24sr5bDevtZNdGXhl+THoIV0nwzZYzTLfjP6nrjCIypSREWGqDggKnJERYGoEESFIioMUYGwUxB2CsJOQdgpCDsFYacg7BSEnYKwUxB2CsJORdipCDsVYaci7FSEnYqwUxF2KsJORdipCDsNYach7DSEnYaw0xB2GsJOQ9hpCDsNYach7AwIOwPCzoCwMyDsDH9mp+a6j6r514oCUSGICkVU2P9XLOvpo+rr6tTEfa10ndrz05Zp/LzHl4XTve/O8TL1cVs9PbZO6eZf6n2S+mJ9eH38Cw==",
  "file_map": {
    "22": {
      "source": "pub mod hash;\npub mod aes128;\npub mod array;\npub mod slice;\npub mod ecdsa_secp256k1;\npub mod ecdsa_secp256r1;\npub mod embedded_curve_ops;\npub mod field;\npub mod collections;\npub mod compat;\npub mod convert;\npub mod option;\npub mod string;\npub mod test;\npub mod cmp;\npub mod ops;\npub mod default;\npub mod prelude;\npub mod runtime;\npub mod meta;\npub mod append;\npub mod mem;\npub mod panic;\npub mod hint;\n\nuse convert::AsPrimitive;\n\n// Oracle calls are required to be wrapped in an unconstrained function\n// Thus, the only argument to the `println` oracle is expected to always be an ident\n#[oracle(print)]\nunconstrained fn print_oracle<T>(with_newline: bool, input: T) {}\n\nunconstrained fn print_unconstrained<T>(with_newline: bool, input: T) {\n    print_oracle(with_newline, input);\n}\n\npub fn println<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(true, input);\n    }\n}\n\npub fn print<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(false, input);\n    }\n}\n\npub fn verify_proof<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n) {\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, 0);\n}\n\npub fn verify_proof_with_type<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {\n    if !crate::runtime::is_unconstrained() {\n        crate::assert_constant(proof_type);\n    }\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, proof_type);\n}\n\n#[foreign(recursive_aggregation)]\nfn verify_proof_internal<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {}\n\n// Asserts that the given value is known at compile-time.\n// Useful for debugging for-loop bounds.\n#[builtin(assert_constant)]\npub fn assert_constant<T>(x: T) {}\n\n// Asserts that the given value is both true and known at compile-time\n#[builtin(static_assert)]\npub fn static_assert<let N: u32>(predicate: bool, message: str<N>) {}\n\npub fn wrapping_add<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() + y.as_())\n}\n\npub fn wrapping_sub<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    //340282366920938463463374607431768211456 is 2^128, it is used to avoid underflow\n    AsPrimitive::as_(x.as_() + 340282366920938463463374607431768211456 - y.as_())\n}\n\npub fn wrapping_mul<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() * y.as_())\n}\n\n#[builtin(as_witness)]\npub fn as_witness(x: Field) {}\n\nmod tests {\n    use super::wrapping_mul;\n\n    #[test(should_fail_with = \"custom message\")]\n    fn test_static_assert_custom_message() {\n        super::static_assert(1 == 2, \"custom message\");\n    }\n\n    #[test(should_fail)]\n    fn test_wrapping_mul() {\n        // This currently fails.\n        // See: https://github.com/noir-lang/noir/issues/7528\n        let zero: u128 = 0;\n        let one: u128 = 1;\n        let two_pow_64: u128 = 0x10000000000000000;\n        let u128_max: u128 = 0xffffffffffffffffffffffffffffffff;\n\n        // 1*0==0\n        assert_eq(zero, wrapping_mul(zero, one));\n\n        // 0*1==0\n        assert_eq(zero, wrapping_mul(one, zero));\n\n        // 1*1==1\n        assert_eq(one, wrapping_mul(one, one));\n\n        // 0 * ( 1 << 64 ) ==  0\n        assert_eq(zero, wrapping_mul(zero, two_pow_64));\n\n        // ( 1 << 64 ) * 0 == 0\n        assert_eq(zero, wrapping_mul(two_pow_64, zero));\n\n        // 1 * ( 1 << 64 ) == 1 << 64\n        assert_eq(two_pow_64, wrapping_mul(two_pow_64, one));\n\n        // ( 1 << 64 ) * 1 == 1 << 64\n        assert_eq(two_pow_64, wrapping_mul(one, two_pow_64));\n\n        // ( 1 << 64 ) * ( 1 << 64 ) == 1 << 64\n        assert_eq(zero, wrapping_mul(two_pow_64, two_pow_64));\n        // -1 * -1 == 1\n        assert_eq(one, wrapping_mul(u128_max, u128_max));\n    }\n}\n",
      "path": "std/lib.nr"
    },
    "50": {
      "source": "global FOO: Field = 1;\n\nfn main() {\n    println(f\"foo = {FOO}\");\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
